syntax = "proto3";

package chat;
option java_multiple_files=true;
option java_package='com.minibuddy.app';
option java_outer_classname="ChatProto";

// -------- Request message --------
message ChatRequest {
  string user_id = 1;
  string message = 2;
}

message MemoryAnswerRequest {
  string user_id = 1;
  string answer = 2;
  string question_id = 3;
}

// -------- Response message --------
message ChatResponse {
  string reply = 1;
  int32 dep_score = 2;
  int32 anx_score = 3;
  int32 str_score = 4;
}

message MemoryQuestionResponse {
  string question = 1;
  int32 dep_score = 2;
}

message MemoryAnswerResult {
  string reply = 1;
  int32 mci_score = 2;
  int32 dep_score = 3;
  string mci_reason = 4;
}

// -------- Service --------
service ChatAiService {
  rpc GetChatResponse(ChatRequest) returns (ChatResponse);
  rpc GetMemoryQuestion(ChatRequest) returns (MemoryQuestionResponse);
  rpc EvaluateMemoryAnswer(MemoryAnswerRequest) returns (MemoryAnswerResult);
}